[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/StorageUI.gd" type="Script" id=1]
[ext_resource path="res://assets/font/kongtext.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/InventoryUIInstance.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="StorageUI" type="CanvasLayer" groups=["storageui"]]
process_priority = 1
layer = 2
script = ExtResource( 1 )

[node name="PlayerInventory" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 96.0
margin_right = 592.0
margin_bottom = 992.0
color = Color( 0, 0, 0, 0.294118 )

[node name="Storage" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 96.0
margin_right = 208.0
margin_bottom = 992.0
color = Color( 0, 0, 0, 0.294118 )

[node name="UI" type="Panel" parent="."]
margin_left = 1320.0
margin_top = 96.0
margin_right = 1856.0
margin_bottom = 320.0

[node name="NameEdit" type="LineEdit" parent="UI"]
margin_left = 24.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
placeholder_text = "Storage Chest"

[node name="NameHint" type="Label" parent="UI"]
margin_left = 24.0
margin_top = 40.0
margin_right = 104.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="InventoryInstance" type="Node" parent="."]
script = ExtResource( 3 )
parent = NodePath("..")
box_offset = Vector2( 128, 160 )

[node name="StorageInstance" type="Node" parent="."]
script = ExtResource( 3 )
parent = NodePath("..")
bindable = false
box_offset = Vector2( 704, 160 )

[connection signal="text_changed" from="UI/NameEdit" to="." method="_on_name_changed"]
